# vlc-from-scratch

./: flake.nix
rx/: .gitignore  CMakeLists.txt  PLAN.md  README.md  adc_sampler.cpp  adc_sampler.h  flake.nix  rx.ino  vlc_rx.cpp  vlc_rx.h  vlc_rx_config.h
rx/arduino/receiver_due/: adc_sampler.cpp  adc_sampler.h  receiver_due.ino  vlc_rx_config.h
rx/lib/receiver/: library.properties
rx/lib/receiver/src/: ManchesterDecoder.cpp  ManchesterDecoder.h
rx/scripts/: plot_processed_raw.py  split_resample_raw.py
rx/tests/: Makefile  receiver_tests.cpp  sim_rx.cpp
rx/tools/: receiver_sim.cpp
tx/: .clangd  CMakeLists.txt  PLAN.md  flake.nix  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
tx/src/: dmd_control.c  dmd_control.h  main.c  vlc_tx.c  vlc_tx.h
